--- a/PROJETO_M4.ipynb
+++ b/PROJETO_M4.ipynb
@@ -2543,8 +2543,6 @@
     {
       "cell_type": "code",
       "source": [
-        "df_julho['Valor_de_Venda'] = df_julho['Valor_de_Venda'].str.replace(',', '.')\n",
-        "df_julho['Valor_de_Venda']= df_julho['Valor_de_Venda'].astype(float)\n",
         "df_julho.groupby(['Produto'])['Valor_de_Venda'].agg(['mean'])"
       ],
       "metadata": {
@@ -2553,23 +2551,23 @@
           "height": 175
         },
         "id": "wSBZWNc-lqlg",
-        "outputId": "5a6cee0e-ba77-4305-ebe5-c3347dd952dd"
+        "outputId": "350e0984-83fb-4514-d54e-ea3cd5d00798"
       },
-      "execution_count": null,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                    median      mean\n",
-              "Produto                             \n",
-              "ETANOL                4.65  4.759239\n",
-              "GASOLINA              5.97  6.059047\n",
-              "GASOLINA ADITIVADA    6.09  6.238814"
+              "                        mean\n",
+              "Produto                     \n",
+              "ETANOL              4.759239\n",
+              "GASOLINA            6.059047\n",
+              "GASOLINA ADITIVADA  6.238814"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-eac7ce61-108a-43c6-b890-222b378fd55d\">\n",
+              "  <div id=\"df-f03604d8-60c9-42c0-8b44-38b7b52b41eb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2589,35 +2587,30 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>median</th>\n",
               "      <th>mean</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Produto</th>\n",
-              "      <th></th>\n",
               "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>ETANOL</th>\n",
-              "      <td>4.65</td>\n",
               "      <td>4.759239</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>GASOLINA</th>\n",
-              "      <td>5.97</td>\n",
               "      <td>6.059047</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>GASOLINA ADITIVADA</th>\n",
-              "      <td>6.09</td>\n",
               "      <td>6.238814</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-eac7ce61-108a-43c6-b890-222b378fd55d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f03604d8-60c9-42c0-8b44-38b7b52b41eb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2668,12 +2661,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-eac7ce61-108a-43c6-b890-222b378fd55d button.colab-df-convert');\n",
+              "          document.querySelector('#df-f03604d8-60c9-42c0-8b44-38b7b52b41eb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-eac7ce61-108a-43c6-b890-222b378fd55d');\n",
+              "          const element = document.querySelector('#df-f03604d8-60c9-42c0-8b44-38b7b52b41eb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2696,15 +2689,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 109
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df_agosto['Valor_de_Venda'] = df_agosto['Valor_de_Venda'].str.replace(',', '.')\n",
-        "df_agosto['Valor_de_Venda']= df_agosto['Valor_de_Venda'].astype(float)\n",
         "df_agosto.groupby(['Produto'])['Valor_de_Venda'].agg(['mean'])"
       ],
       "metadata": {
@@ -2713,23 +2704,23 @@
           "height": 175
         },
         "id": "hsNdvgaOls2O",
-        "outputId": "b6479862-59ae-4b11-d514-4311776608a5"
+        "outputId": "a8b7af8e-93f2-418f-e802-8114f51a5841"
       },
-      "execution_count": null,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                    median      mean\n",
-              "Produto                             \n",
-              "ETANOL                4.19  4.296892\n",
-              "GASOLINA              5.39  5.423378\n",
-              "GASOLINA ADITIVADA    5.59  5.596107"
+              "                        mean\n",
+              "Produto                     \n",
+              "ETANOL              4.296892\n",
+              "GASOLINA            5.423378\n",
+              "GASOLINA ADITIVADA  5.596107"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-952de133-047f-4b03-826f-933cf486803f\">\n",
+              "  <div id=\"df-510fce61-b310-4d5f-85f0-a877537fdd2b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2749,35 +2740,30 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>median</th>\n",
               "      <th>mean</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Produto</th>\n",
-              "      <th></th>\n",
               "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>ETANOL</th>\n",
-              "      <td>4.19</td>\n",
               "      <td>4.296892</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>GASOLINA</th>\n",
-              "      <td>5.39</td>\n",
               "      <td>5.423378</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>GASOLINA ADITIVADA</th>\n",
-              "      <td>5.59</td>\n",
               "      <td>5.596107</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-952de133-047f-4b03-826f-933cf486803f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-510fce61-b310-4d5f-85f0-a877537fdd2b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2828,12 +2814,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-952de133-047f-4b03-826f-933cf486803f button.colab-df-convert');\n",
+              "          document.querySelector('#df-510fce61-b310-4d5f-85f0-a877537fdd2b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-952de133-047f-4b03-826f-933cf486803f');\n",
+              "          const element = document.querySelector('#df-510fce61-b310-4d5f-85f0-a877537fdd2b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2856,7 +2842,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 110
         }
       ]
     },
@@ -2865,7 +2851,7 @@
       "source": [
         "* Etanol teve uma redução de cerca de **9,7%** de Julho para Agosto\n",
         "* Gasolina teve uma redução de cerca de **10.5%** de Julho para Agosto\n",
-        "* Gasolina Aditivada teve uma redução de cerca de **10.3%**\n",
+        "* Gasolina Aditivada teve uma redução de cerca de **10.3%** de Julho de Agosto\n",
         "\n",
         "Com isso é possível concluir que todos os tipos de combustíveis tiveram, em média, uma diminuição no preço de Julho para Agosto de cerca de **10.1%**."
       ],
@@ -2890,13 +2876,13 @@
       ],
       "metadata": {
         "id": "LY98WB714l0p",
-        "outputId": "c7571f74-794d-44c9-9422-f61e506c4c97",
+        "outputId": "fdfefbe9-12ab-4db8-c906-73f1ee794038",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
         }
       },
-      "execution_count": null,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2910,7 +2896,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8dabffa5-aa09-4c06-9b1f-5a4569994651\">\n",
+              "  <div id=\"df-1ab4fa68-b0fe-444a-9f73-e8538dae5ec1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2958,7 +2944,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8dabffa5-aa09-4c06-9b1f-5a4569994651')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ab4fa68-b0fe-444a-9f73-e8538dae5ec1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -3009,12 +2995,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8dabffa5-aa09-4c06-9b1f-5a4569994651 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1ab4fa68-b0fe-444a-9f73-e8538dae5ec1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8dabffa5-aa09-4c06-9b1f-5a4569994651');\n",
+              "          const element = document.querySelector('#df-1ab4fa68-b0fe-444a-9f73-e8538dae5ec1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3037,7 +3023,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 114
         }
       ]
     },
@@ -3045,28 +3031,18 @@
       "cell_type": "code",
       "source": [
         "df_combustivel = df_completo\n",
-        "df_combustivel.groupby(['Produto'])['Valor_de_Venda'].agg(['mean']).plot(kind='bar', figsize=(20,5))"
+        "df_combustivel.groupby(['Produto'])['Valor_de_Venda'].agg(['mean']).plot(kind='bar', figsize=(20,5));"
       ],
       "metadata": {
         "id": "4m1Is5yA41qM",
-        "outputId": "2cab2327-6349-4032-e413-df950142f967",
+        "outputId": "aab92401-9127-4198-ec07-551cb6667470",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 449
+          "height": 432
         }
       },
-      "execution_count": null,
+      "execution_count": 112,
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f0c55018710>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -3339,19 +3315,19 @@
         "\n",
         "#Etanol\n",
         "\n",
-        "df_max_municipio_etanol = df_maxima_municipio.loc['ETANOL'].sort_values(by = 'Valor_de_Venda')\n",
+        "df_max_municipio_etanol = df_maxima_municipio.loc['ETANOL'].sort_values(by = 'Valor_de_Venda', ascending = False)\n",
         "df_max_municipio_etanol = df_max_municipio_etanol.reset_index().head(1)\n",
         "df_max_municipio_etanol['Produto'] = 'Etanol'\n",
         "\n",
         "#Gasolina\n",
         "\n",
-        "df_max_municipio_gasolina = df_maxima_municipio.loc['GASOLINA'].sort_values(by = 'Valor_de_Venda')\n",
+        "df_max_municipio_gasolina = df_maxima_municipio.loc['GASOLINA'].sort_values(by = 'Valor_de_Venda', ascending = False)\n",
         "df_max_municipio_gasolina = df_max_municipio_gasolina.reset_index().head(1)\n",
         "df_max_municipio_gasolina['Produto'] = 'Gasolina'\n",
         "\n",
         "#Gasolina Aditivada\n",
         "\n",
-        "df_max_municipio_gasolina_adt = df_maxima_municipio.loc['GASOLINA ADITIVADA'].sort_values(by = 'Valor_de_Venda')\n",
+        "df_max_municipio_gasolina_adt = df_maxima_municipio.loc['GASOLINA ADITIVADA'].sort_values(by = 'Valor_de_Venda', ascending = False)\n",
         "df_max_municipio_gasolina_adt = df_max_municipio_gasolina_adt.reset_index().head(1)\n",
         "df_max_municipio_gasolina_adt['Produto'] = 'Gasolina Aditivada'\n",
         "\n",
@@ -3367,20 +3343,20 @@
           "height": 143
         },
         "id": "i-vD7OkS7p9E",
-        "outputId": "b776ec9f-c06e-4f07-a218-a04b40be03cc"
+        "outputId": "ee23e8d2-b56a-425a-c793-8f11c8c99669"
       },
-      "execution_count": null,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<pandas.io.formats.style.Styler at 0x7f0c514b1950>"
+              "<pandas.io.formats.style.Styler at 0x7f0c459d5150>"
             ],
             "text/html": [
               "<style type=\"text/css\">\n",
               "</style>\n",
-              "<table id=\"T_3cd8a_\" class=\"dataframe\">\n",
+              "<table id=\"T_5a24f_\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr>\n",
               "      <th class=\"blank level0\" >&nbsp;</th>\n",
@@ -3391,29 +3367,29 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th id=\"T_3cd8a_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-              "      <td id=\"T_3cd8a_row0_col0\" class=\"data row0 col0\" >Etanol</td>\n",
-              "      <td id=\"T_3cd8a_row0_col1\" class=\"data row0 col1\" >GARCA</td>\n",
-              "      <td id=\"T_3cd8a_row0_col2\" class=\"data row0 col2\" >R$ 3.990</td>\n",
+              "      <th id=\"T_5a24f_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_5a24f_row0_col0\" class=\"data row0 col0\" >Etanol</td>\n",
+              "      <td id=\"T_5a24f_row0_col1\" class=\"data row0 col1\" >BAGE</td>\n",
+              "      <td id=\"T_5a24f_row0_col2\" class=\"data row0 col2\" >R$ 7.890</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th id=\"T_3cd8a_level0_row1\" class=\"row_heading level0 row1\" >0</th>\n",
-              "      <td id=\"T_3cd8a_row1_col0\" class=\"data row1 col0\" >Gasolina</td>\n",
-              "      <td id=\"T_3cd8a_row1_col1\" class=\"data row1 col1\" >SANTANA</td>\n",
-              "      <td id=\"T_3cd8a_row1_col2\" class=\"data row1 col2\" >R$ 5.590</td>\n",
+              "      <th id=\"T_5a24f_level0_row1\" class=\"row_heading level0 row1\" >0</th>\n",
+              "      <td id=\"T_5a24f_row1_col0\" class=\"data row1 col0\" >Gasolina</td>\n",
+              "      <td id=\"T_5a24f_row1_col1\" class=\"data row1 col1\" >GURUPI</td>\n",
+              "      <td id=\"T_5a24f_row1_col2\" class=\"data row1 col2\" >R$ 8.750</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th id=\"T_3cd8a_level0_row2\" class=\"row_heading level0 row2\" >0</th>\n",
-              "      <td id=\"T_3cd8a_row2_col0\" class=\"data row2 col0\" >Gasolina Aditivada</td>\n",
-              "      <td id=\"T_3cd8a_row2_col1\" class=\"data row2 col1\" >SANTANA</td>\n",
-              "      <td id=\"T_3cd8a_row2_col2\" class=\"data row2 col2\" >R$ 5.530</td>\n",
+              "      <th id=\"T_5a24f_level0_row2\" class=\"row_heading level0 row2\" >0</th>\n",
+              "      <td id=\"T_5a24f_row2_col0\" class=\"data row2 col0\" >Gasolina Aditivada</td>\n",
+              "      <td id=\"T_5a24f_row2_col1\" class=\"data row2 col1\" >MAGE</td>\n",
+              "      <td id=\"T_5a24f_row2_col2\" class=\"data row2 col2\" >R$ 9.270</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 113
         }
       ]
     },
