--- a/PROJETO_M4.ipynb
+++ b/PROJETO_M4.ipynb
@@ -2553,7 +2553,7 @@
         "id": "wSBZWNc-lqlg",
         "outputId": "350e0984-83fb-4514-d54e-ea3cd5d00798"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2706,7 +2706,7 @@
         "id": "hsNdvgaOls2O",
         "outputId": "a8b7af8e-93f2-418f-e802-8114f51a5841"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2882,7 +2882,7 @@
           "height": 175
         }
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3041,7 +3041,7 @@
           "height": 432
         }
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3203,6 +3203,226 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df_completo_comb.groupby(['Regiao','Produto'])['Valor_de_Venda'].agg(['mean'], asceding = False)\n"
+      ],
+      "metadata": {
+        "id": "17bJPRMC1-GY",
+        "outputId": "b2a5fb36-5165-4820-be46-3e8ae853b3c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 551
+        }
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                               mean\n",
+              "Regiao Produto                     \n",
+              "CO     ETANOL              4.104856\n",
+              "       GASOLINA            5.580284\n",
+              "       GASOLINA ADITIVADA  5.720068\n",
+              "N      ETANOL              5.342053\n",
+              "       GASOLINA            5.972823\n",
+              "       GASOLINA ADITIVADA  6.106768\n",
+              "NE     ETANOL              5.245104\n",
+              "       GASOLINA            5.955036\n",
+              "       GASOLINA ADITIVADA  6.109423\n",
+              "S      ETANOL              4.841570\n",
+              "       GASOLINA            5.641591\n",
+              "       GASOLINA ADITIVADA  5.777760\n",
+              "SE     ETANOL              4.149886\n",
+              "       GASOLINA            5.615707\n",
+              "       GASOLINA ADITIVADA  5.827186"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-e2377cb0-5f08-4f2c-ad08-5541cbf4b99d\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th>mean</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Regiao</th>\n",
+              "      <th>Produto</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">CO</th>\n",
+              "      <th>ETANOL</th>\n",
+              "      <td>4.104856</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA</th>\n",
+              "      <td>5.580284</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA ADITIVADA</th>\n",
+              "      <td>5.720068</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">N</th>\n",
+              "      <th>ETANOL</th>\n",
+              "      <td>5.342053</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA</th>\n",
+              "      <td>5.972823</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA ADITIVADA</th>\n",
+              "      <td>6.106768</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">NE</th>\n",
+              "      <th>ETANOL</th>\n",
+              "      <td>5.245104</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA</th>\n",
+              "      <td>5.955036</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA ADITIVADA</th>\n",
+              "      <td>6.109423</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">S</th>\n",
+              "      <th>ETANOL</th>\n",
+              "      <td>4.841570</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA</th>\n",
+              "      <td>5.641591</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA ADITIVADA</th>\n",
+              "      <td>5.777760</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">SE</th>\n",
+              "      <th>ETANOL</th>\n",
+              "      <td>4.149886</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA</th>\n",
+              "      <td>5.615707</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA ADITIVADA</th>\n",
+              "      <td>5.827186</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e2377cb0-5f08-4f2c-ad08-5541cbf4b99d')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-e2377cb0-5f08-4f2c-ad08-5541cbf4b99d button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-e2377cb0-5f08-4f2c-ad08-5541cbf4b99d');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 121
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "*5*. **Qual o município que possui o menor preço para a gasolina e para o etanol?**"
@@ -3345,7 +3565,7 @@
         "id": "i-vD7OkS7p9E",
         "outputId": "ee23e8d2-b56a-425a-c793-8f11c8c99669"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5315,8 +5535,163 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df_completo_comb.groupby(['Produto'])['Valor_de_Venda'].agg(['max'])"
+      ],
+      "metadata": {
+        "id": "6ZrTIGp93zef",
+        "outputId": "6b9b0fbc-4b50-4bd1-884e-9a2cd96067db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        }
+      },
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                     max\n",
+              "Produto                 \n",
+              "ETANOL              7.89\n",
+              "GASOLINA            8.75\n",
+              "GASOLINA ADITIVADA  9.27"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-7858c7be-31c0-4fcd-b86a-8c351ade37a7\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>max</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Produto</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>ETANOL</th>\n",
+              "      <td>7.89</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA</th>\n",
+              "      <td>8.75</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>GASOLINA ADITIVADA</th>\n",
+              "      <td>9.27</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7858c7be-31c0-4fcd-b86a-8c351ade37a7')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-7858c7be-31c0-4fcd-b86a-8c351ade37a7 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-7858c7be-31c0-4fcd-b86a-8c351ade37a7');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 122
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
         "*Extra n°2*. **Qual o valor maximo e minimo dos combustíveis no período ?**"
       ],
       "metadata": {
@@ -5481,6 +5856,18 @@
           "execution_count": 45
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "É possível notar que para o mesmo mês, encontramos uma diferença de:\n",
+        "* Etanol: Maior valor **170%** maior que o valor mínimo\n",
+        "* Gasolina: Maior valor **103.4%** maior que o valor mínimo\n",
+        "* Gasolina Aditivada: Maior valor **124.5** maior que o valor mínimo"
+      ],
+      "metadata": {
+        "id": "pvy_BOsw38Al"
+      }
     },
     {
       "cell_type": "code",
